--- a/style.css
+++ b/style.css
@@ -32,10 +32,7 @@ body {
     margin: auto;
     max-width: 100%;
     max-height: 100%;
-    
-    /* 👇 BORDER ADDED DIRECTLY TO THE IMAGE ELEMENT */
-    border: 12px solid gray; 
-    
+    border: 1px solid #eee;
     filter: none;
     transition: none;
 }
