--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     font-family: sans-serif;
     overflow: hidden; 
-    background-color: #FFF;
+    background-color: #ccc;
 }
 
 .page-container {
