--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body {
     width: 100%;
     height: 100%;
     z-index: 10; 
+       border-style: solid;
+  border-color: gray;
 }
 
 .full-page-image {
