--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
     text-decoration: none;
     border-radius: 5px;
     font-size: 16px;
-    border: 1px solid #fff; 
+    border: 1px solid red; 
 }
 
 
