--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ padding: 10px 15px;
 text-decoration: none;
 border-radius: 5px;
 font-size: 16px;
-border: 1px solid red;
+border: 1px solid #fff;
 }
 
 /* ------------------------------------------------------------------- /
